<resources>
    <string name="app_name">مدرسة الهاشمية</string>
    <string name="https_www_wepal_net_library_upload_03_2021_content_603e83f9c0ac4_pdf"><a href= "https://www.wepal.net/library/upload/03-2021/content/603e83f9c0ac4.pdf">رابط الكتاب : https://www.wepal.net/library/upload/03-2021/content/603e83f9c0ac4.pdf</a></string>
    <string name="_5_n_https_www_youtube_com_watch_v_o2vfwu9eutyt_104s_n_n">الصفحه: 5 \n فيديو شرح : <a href="https://www.youtube.com/watch?v=XbCWDVOYoZo">https://www.youtube.com/watch?v=XbCWDVOYoZo</a> \n \n القصة : تتحدث عن جد يسكن في بيت من الصفيح على شاطئ بيروت ، وعن بنت صغيرة اسمها حيفا ، لا تحب بيتها كثيرا لانه حار في الصيف وبارد في الشتاء ، ترافق حيفا جدها في رحته عبر قاربه الصغير لصيد الاسماك ، في احد الايام لم يأخذها معه وقال لها ساذهب بعيدا اليوم هنالك حيفا ثانية خلف البحر ، جميلة مثلك وتنتظرني دائما ، حيفا الصغيرة حزنت زظنت ان جدها العجوز يحب فتاة اخرى اسمها حيفا ، لكن طائر النورس الذي يحوم حولها دوما وضح لها الامر ان هنالك مدينة اخرى اسمها حيفا ، ودها ولد وترعرع بها لذا هي تحمل اسمها ، فقد عندها فرحت حيفا الصغيرة ، جلست على الشاطئ تحلم بحيفا الثانية .</string>
    <string name="_17_n_https_www_youtube_com_watch_v_sm39vtiw0xu_n_n_https_www_sh_pal_com_2021_06_blog_post_39_html">الصفحه: 17 \n فيديو شرح : <a href="https://www.youtube.com/watch?v=SM39VTIW0XU">https://www.youtube.com/watch?v=SM39VTIW0XU</a> \n \n القصة : <a href="https://www.sh-pal.com/2021/06/blog-post_39.html">https://www.sh-pal.com/2021/06/blog-post_39.html</a></string>
    <string name="_27_n_https_www_youtube_com_watch_v_exoc_tnz464_n_n">الصفحه: 27 \n فيديو شرح : <a href="https://www.youtube.com/watch?v=Exoc-tNz464">https://www.youtube.com/watch?v=Exoc-tNz464</a> \n \n الملخص : يتبين المخلص من مغزى القصة حيث تعلمنا هذه القصة القصيرة درسًا أخلاقيًا مفاده أن الكذب يندم صاحبه وعلينا أن نبتعد عن الكذب حتي لا يعتبرنا الناس كذابا ولا يصدقونا أبدا حيث أن الناس يرفضون تصديق كاذب حتى عندما يقول الحقيقة. قصه الراعي الكاذب للأطفال هي قصة يجب على كل طفل قراءتها وتعلم الدرس الأساسي منها. إنها قصة تترك بصمة عميقة في أذهان كل قارئ.</string>
    <string name="_37_n_https_www_youtube_com_watch_v_vkzka6ie3wo_n_n_https_www_wepal_net_library_app_content_show_10829">الصفحه: 37 \n فيديو شرح : <a href="https://www.youtube.com/watch?v=vKZkA6IE3wo">https://www.youtube.com/watch?v=vKZkA6IE3wo</a> \n \nالقصة : <a href="https://www.wepal.net/library/?app=content.show.10829">https://www.wepal.net/library/?app=content.show.10829</a></string>
    <string name="_47_n_https_www_youtube_com_watch_v_u0p_qo2twfe_n_n_https_www_wepal_net_library_app_content_show_10830">الصفحه: 47 \n فيديو شرح : <a href="https://www.youtube.com/watch?v=u0P_QO2tWfE">https://www.youtube.com/watch?v=u0P_QO2tWfE</a> \n \nالقصة : <a href="https://www.wepal.net/library/?app=content.show.10830">https://www.wepal.net/library/?app=content.show.10830</a></string>
    <string name="_57_n_https_www_youtube_com_watch_v_od0zvxemons_n_n_https_ckf_fatakat_n_club_p_d8_b4_d8_b1_d8_ad_d8_af_d8_b1_d8_b3_d9_81_d9_8a_d9_85_d9_8a_d9_86_d8_a7_d8_a1_d8_ba_d8_b2_d8_a9">الصفحه: 57 \n فيديو شرح : <a href="https://www.youtube.com/watch?v=od0zVXEmons">https://www.youtube.com/watch?v=od0zVXEmons</a> \n \nالقصة : <a href="https://ckf.fatakat-n.club/p/%D8%B4%D8%B1%D8%AD-%D8%AF%D8%B1%D8%B3-%D9%81%D9%8A-%D9%85%D9%8A%D9%86%D8%A7%D8%A1-%D8%BA%D8%B2%D8%A9">https://ckf.fatakat-n.club/p/%D8%B4%D8%B1%D8%AD-%D8%AF%D8%B1%D8%B3-%D9%81%D9%8A-%D9%85%D9%8A%D9%86%D8%A7%D8%A1-%D8%BA%D8%B2%D8%A9</a></string>
    <string name="_67_n_https_www_youtube_com_watch_v_ol26isqw_8o_n_n_https_www_wepal_net_library_app_content_show_10863">الصفحه: 67 \n فيديو شرح : <a href="https://www.youtube.com/watch?v=ol26isQW_8o">https://www.youtube.com/watch?v=ol26isQW_8o</a> \n \nالقصة : <a href="https://www.wepal.net/library/?app=content.show.10863">https://www.wepal.net/library/?app=content.show.10863</a></string>
    <string name="_77_n_https_www_youtube_com_watch_v_3la3xw1bn3w_n_n_https_www_wepal_net_library_app_content_show_10864">الصفحه: 77 \n فيديو شرح : <a href="https://www.youtube.com/watch?v=3lA3XW1Bn3w">https://www.youtube.com/watch?v=3lA3XW1Bn3w</a> \n \nالقصة : <a href="https://www.wepal.net/library/?app=content.show.10864">https://www.wepal.net/library/?app=content.show.10864</a></string>
    <string name="_87_n_https_www_youtube_com_watch_v_njbgq86viq0_n_n_https_www_wepal_net_library_app_content_show_10865">الصفحه: 87 \n فيديو شرح : <a href="https://www.youtube.com/watch?v=NJBGq86viQ0">https://www.youtube.com/watch?v=NJBGq86viQ0</a> \n \nالقصة : <a href="https://www.wepal.net/library/?app=content.show.10865">https://www.wepal.net/library/?app=content.show.10865</a></string>
    <string name="_97_n_https_www_youtube_com_watch_v_53jw_qd_kj0_n_n_https_www_wepal_net_library_app_content_show_10866">الصفحه: 97 \n فيديو شرح : <a href="https://www.youtube.com/watch?v=53jw_QD-kJ0">https://www.youtube.com/watch?v=53jw_QD-kJ0</a> \n \nالقصة : <a href="https://www.wepal.net/library/?app=content.show.10866">https://www.wepal.net/library/?app=content.show.10866</a></string>
</resources>

